--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,43 @@
 [tool.poetry]
-name = "python-scripts"
-version = "0.1.0"
-description = "Python Scripts for various purposes"
+name = "pydevcli2"
+version = "0.1.1"
+description = "Python CLI for various purposes"
 authors = ["giraycoskun <giraycoskun.dev@gmail.com>"]
 license = "MIT"
 readme = "README.md"
+packages = [{include = "pydevcli"}]
 
 [tool.poetry.dependencies]
 python = "3.11.6"
+typer = {extras = ["all"], version = "^0.9.0"}
 
+
+[tool.poetry.group.dev.dependencies]
+black = {extras = ["jupyter"], version = "^23.12.0"}
+pylint = "^3.0.3"
+
+
+[tool.poetry.group.docs.dependencies]
+mkdocs-material = "^9.5.2"
+mkdocstrings = {extras = ["python"], version = "^0.24.0"}
+
+
+[tool.poetry.group.test.dependencies]
+pytest = "^7.4.3"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poe.tasks]
+format = "black ."
+run = "python -m main"
+lint = "pylint main.py website"
+export = "poetry export -f requirements.txt --output requirements.txt --without-hashes --only main" 
+isort = "isort . --profile black"
+
+[tool.isort]
+profile = "black"
+
+[tool.poetry.scripts]
+pydevcli = "pydevcli.cli:app"
