--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ typer = {extras = ["all"], version = "^0.9.0"}
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "^23.12.0"}
 pylint = "^3.0.3"
+isort = "^5.13.2"
 
 
 [tool.poetry.group.docs.dependencies]
