--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/setup-python@v5
         id: setup-python
         with:
-          python-version: '^3.11'
+          python-version: '3.11'
 
       - name: Install and configure Poetry
         uses: snok/install-poetry@v1
