--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 packages = [{include = "pydevcli"}]
 
 [tool.poetry.dependencies]
-python = "3.11.6"
+python = "^3.11"
 typer = {extras = ["all"], version = "^0.9.0"}
 
 
