--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ typer = {extras = ["all"], version = "^0.9.0"}
 black = {extras = ["jupyter"], version = "^23.12.0"}
 pylint = "^3.0.3"
 isort = "^5.13.2"
+commitizen = "^3.13.0"
 
 
 [tool.poetry.group.docs.dependencies]
@@ -27,6 +28,13 @@ mkdocstrings = {extras = ["python"], version = "^0.24.0"}
 pytest = "^7.4.3"
 coverage = "^7.3.4"
 
+
+[tool.commitizen]
+name = "cz_conventional_commits"
+tag_format = "v$version"
+version_scheme = "semver"
+version_provider = "poetry"
+update_changelog_on_bump = true
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
