--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ black = {extras = ["jupyter"], version = "^23.12.0"}
 pylint = "^3.0.3"
 isort = "^5.13.2"
 commitizen = "^3.13.0"
+pre-commit = "^3.6.0"
 
 
 [tool.poetry.group.docs.dependencies]
@@ -35,6 +36,8 @@ tag_format = "v$version"
 version_scheme = "semver"
 version_provider = "poetry"
 update_changelog_on_bump = true
+changelog_file = "./docs/CHANGELOG.md"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
