--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,12 +1,11 @@
-name: dev
+name: Development
 
 on: 
   pull_request:
     branches:
-      - main
+      - dev
   push:
     branches:
-      - main
       - dev
   
   workflow_dispatch:
