--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,3 +14,16 @@ theme:
       toggle:
         icon: material/brightness-4
         name: Switch to light mode
+
+markdown_extensions:
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
+
+nav:
+  - Home: README.md
+  - Installation: installation.md
+  - Development: development.md
+  - Changelog: CHANGELOG.md
